[gd_scene load_steps=3 format=2]

[ext_resource path="res://HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://Textures/restartButton.png" type="Texture" id=2]

[node name="HUD" type="Control"]
margin_right = 400.0
margin_bottom = 600.0
script = ExtResource( 1 )

[node name="LifeContainer" type="HBoxContainer" parent="."]
anchor_left = 0.01
anchor_top = 0.01
anchor_right = 0.1
anchor_bottom = 0.01
margin_left = 4.0
margin_top = 3.0
margin_right = 590.0
margin_bottom = 181.0
rect_scale = Vector2( 0.198092, 0.2 )
custom_constants/separation = 5

[node name="Score" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -50.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 50.0
text = "0"
align = 2

[node name="FinalScore" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0

[node name="RestartButton" type="TextureButton" parent="."]
visible = false
anchor_left = 0.49
anchor_top = 0.8
anchor_right = 0.5
anchor_bottom = 0.8
margin_left = -52.5
margin_top = -43.0
margin_right = 52.5
margin_bottom = 43.0
texture_normal = ExtResource( 2 )

[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
